fixed wrap for secvault footer

--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ textarea {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 90rem;
+  max-width: 150rem;
   width: 92%;
 }
 @media only screen and (max-width: 37.5em) {
@@ -294,7 +294,7 @@ textarea {
 }
 .home-hero__info {
   margin: 3rem auto 0 auto;
-  max-width: 80rem;
+  max-width: 150rem;
   font-size: 1.8rem;
 }
 .home-hero__cta {
@@ -595,7 +595,7 @@ textarea {
 }
 .project-cs-hero__content {
   padding: 25rem 0 17rem 0;
-  max-width: 90rem;
+  max-width: 100rem;
   width: 92%;
   margin: auto;
 }
@@ -609,7 +609,7 @@ textarea {
 }
 .project-cs-hero__info {
   margin: 3rem auto 0 auto;
-  max-width: 80rem;
+  max-width: 100rem;
 }
 .project-cs-hero__cta {
   margin-top: 5rem;
@@ -875,7 +875,7 @@ textarea {
 .main-footer__row-2 {
   width: 40%;
   order: 1;
-  max-width: 50rem;
+  max-width: 100rem;
 }
 @media only screen and (max-width: 56.25em) {
   .main-footer__row-2 {
@@ -887,6 +887,7 @@ textarea {
   color: #eee;
   font-size: 1.5rem;
   line-height: 1.7;
+  white-space: nowrap;
 }
 .main-footer__social-cont {
   margin-top: 2rem;
